--- a/member/src/main/resources/application.yml
+++ b/member/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   application:
     name: member
   redis:
-    host: 47.100.50.60
-    password: 123
+    host: 127.0.0.1
+    password: root
     port: 6379
     pool:
       max-idle: 100
