--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>member</module>
         <module>message</module>
         <module>pcweb</module>
+        <module>pay</module>
     </modules>
 
     <parent>
@@ -126,6 +127,11 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
         </dependency>
 
     </dependencies>
