--- a/pcweb/pom.xml
+++ b/pcweb/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.dobi</groupId>
+            <artifactId>payapi</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
 
         <!-- 引入freemarker包 -->
         <dependency>
