--- a/pcweb/pom.xml
+++ b/pcweb/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>memberapi</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.dobi</groupId>
+            <artifactId>payapi</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.dobi</groupId>
