同步异步回调

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>message</module>
         <module>pcweb</module>
         <module>pay</module>
+        <module>order</module>
     </modules>
 
     <parent>
