--- a/api/orderapi/pom.xml
+++ b/api/orderapi/pom.xml
@@ -3,19 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>shopp-parent</artifactId>
+        <artifactId>api</artifactId>
         <groupId>com.dobi</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>api</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>memberapi</module>
-        <module>payapi</module>
-        <module>orderapi</module>
-    </modules>
+    <artifactId>orderapi</artifactId>
 
 
+    <dependencies>
+
+        <dependency>
+            <groupId>com.dobi</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
