--- a/order/pom.xml
+++ b/order/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>pay</artifactId>
+    <artifactId>order</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.dobi</groupId>
-            <artifactId>payapi</artifactId>
+            <artifactId>orderapi</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!-- springboot整合mybatis -->
@@ -23,30 +23,6 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.0</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.dobi</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.dobi</groupId>
-            <artifactId>orderapi</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.1991wangliang</groupId>
-            <artifactId>alipay-sdk</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-feign</artifactId>
-        </dependency>
     </dependencies>
-
 
 </project>
