分布式事务LCN解决方案来解决支付和订单事务问题

--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -48,6 +48,8 @@ spring:
 ##队列      
 messages:
    queue: messages_queue
-
- 
+##LCN分布式事务
+tm:
+ manager:
+  url: http://127.0.0.1:8899/tx/manager/
     
