--- a/pay/src/main/resources/application.yml
+++ b/pay/src/main/resources/application.yml
@@ -39,3 +39,8 @@ spring:
         testOnReturn: false
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
+
+##LCN分布式事务
+tm:
+ manager:
+  url: http://127.0.0.1:8899/tx/manager/
