--- a/weixin/pom.xml
+++ b/weixin/pom.xml
@@ -18,5 +18,11 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-mp</artifactId>
+            <version>2.8.0</version>
+        </dependency>
     </dependencies>
 </project>
